--- a/index.html
+++ b/index.html
@@ -8,53 +8,101 @@
 </head>
 <body>
     <header class="header">
-        <a href="/"><img src="" alt=""></a>
+        <a href="/"><img src="" alt="logo"></a>
         <nav class="header-nav">
             <ul>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Catalog</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <a href="#">Catalog</a>
+                </li>
+                <li>
+                    <a href="#">About Us</a>
+                </li>
             </ul>
         </nav>
+        <ul>
+            <li>
+                <a href="#"><img src="" alt="search"></a>
+            </li>
+            <li>
+                <a href="#">Contact Us</a>
+            </li>
+        </ul>
     </header>
     <main class="main">
         <section class="collection">
-            <h1 class="title">THE OOH NOO COLLECTION</h1>
-            <p class="subtitle">Designed in Slovenia</p>
-            <button class="button" type="button">EXPLORE NOW</button>
+            <div class="switch">
+                <span>01</span>
+                <ul>
+                    <li><button></button></li>
+                    <li><button></button></li>
+                    <li><button></button></li>
+                    <li><button></button></li>
+                </ul>
+            </div>
+            <div class="text">
+                <h1 class="title">THE OOH NOO COLLECTION</h1>
+                <p class="subtitle">Designed in Slovenia</p>
+                <button class="button" type="button">EXPLORE NOW</button>
+            </div>
             <p class="sub-subtitle">Free (continental) USA shipping on all orders of $100 USD or more!</p>
         </section>
         <section class="category">
-            <h2 class="title">Category Products</h2>
-            <ul>
-                <li><img src="" alt=""><p>APPAREL KIDS</p></li>
-                <li><img src="" alt=""><p>HOLIDAY SHOP</p></li>
-                <li><img src="" alt=""><p>TOYS</p></li>
-                <li><img src="" alt=""><p>ACCESSORIES</p></li>
-            </ul>
-            <button class="left-arrow">&lt;</button>
-            <button class="right-arrow">&gt;</button>
-            <p class="category-subtitle">Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
+            <div class="category-products">
+                <h2 class="title">Category Products</h2>
+                <ul>
+                    <li>
+                        <img src="" alt="apparel kids">
+                        <p>APPAREL KIDS</p>
+                    </li>
+                    <li>
+                        <img src="" alt="holiday shop">
+                        <p>HOLIDAY SHOP</p>
+                    </li>
+                    <li>
+                        <img src="" alt="toys">
+                        <p>TOYS</p>
+                    </li>
+                    <li>
+                        <img src="" alt="accessories">
+                        <p>ACCESSORIES</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="swith-category">
+                <button class="left-arrow">&lt;</button>
+                <button class="right-arrow">&gt;</button>
+                <p class="category-subtitle">Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
+            </div>
         </section>
         <section class="delivery">
-            <img class="delivery-img" src="" alt="">
-            <div class="delivery-delivery">
+            <img class="delivery-img" src="" alt="dress">
+            <div class="delivery-text">
                 <h2 class="title">Delivery</h2>
                 <p class="subtitle">Delivery</p>
                 <p class="subtitle">Guarantee</p>
                 <p class="subtitle">Credit</p>
-                <p class="subtitle">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-                <p class="subtitle">What started as an outlet to deal with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
+                <p class="description">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
+                <p class="description">What started as an outlet to deal with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
                 <a href="#">LEARN MORE</a>
             </div>
         </section>
         <section class="awards">
             <ul>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
+                <li>
+                    <img src="" alt="mail.ru">
+                </li>
+                <li>
+                    <img src="" alt="apple">
+                </li>
+                <li>
+                    <img src="" alt="eltex">
+                </li>
+                <li>
+                    <img src="" alt="owox">
+                </li>
             </ul>
         </section>
     </main>
@@ -70,39 +118,75 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.58601728222!2d-122.4236554651123!3d37.776304100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809eb08736cb%3A0xd0499d3f418e942d!2zNzcgRmVsbCBTdCwgU2FuIEZyYW5jaXNjbywgQ0EgOTQxMDIsINCh0KjQkA!5e0!3m2!1sru!2sru!4v1668937738385!5m2!1sru!2sru" width="483" height="196" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </article>
     <footer class="footer">
-        <div>
+        <div class="navigation">
             <p>Navigation</p>
-            <ul>
-                <li>About Us</li>
-                <li>Blog</li>
-                <li>Design Services</li>
-                <li>Featured On</li>
-                <li>2018 Holiday Catalog</li>
-                <li>Shop By Designer</li>
-            </ul>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#">Design Services</a>
+                    </li>
+                    <li>
+                        <a href="#">Featured On</a>
+                    </li>
+                    <li>
+                        <a href="#">2018 Holiday Catalog</a>
+                    </li>
+                    <li>
+                        <a href="#">Shop By Designer</a>
+                    </li>
+                </ul>
+            </nav>
             <p>Company Rating</p>
         </div>
-        <div>
+        <div class="information">
             <p>Customer Information</p>
-            <ul>
-                <li>Contact Us</li>
-                <li>Sale Exclusions</li>
-                <li>Shipping & Returns</li>
-                <li>Terms & Conditions</li>
-                <li>Privacy Policy</li>
-                <li>Search</li>
-            </ul>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Sale Exclusions</a>
+                    </li>
+                    <li>
+                        <a href="#">Shipping & Returns</a>
+                    </li>
+                    <li>
+                        <a href="#">Terms & Conditions</a>
+                    </li>
+                    <li>
+                        <a href="#">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="#">Search</a>
+                    </li>
+                </ul>
+            </nav>
             <p>Copyright © 2018 Dlk • Design Life Kids</p>
         </div>
-        <div>
+        <div class="connect">
             <p>Connect</p>
             <input type="text" name="text" placeholder="Email">
             <button>Join</button>
             <ul>
-                <li><a href="#"><img src="" alt=""></a></li>
-                <li><a href="#"><img src="" alt=""></a></li>
-                <li><a href="#"><img src="" alt=""></a></li>
-                <li><a href="#"><img src="" alt=""></a></li>
+                <li>
+                    <a href="#"><img src="" alt="facebook"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="" alt="twitter"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="" alt="pinterest"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="" alt="instagram"></a>
+                </li>
             </ul>
             <p>Web Design — Direct Line Development</p>
         </div>
