--- a/index.html
+++ b/index.html
@@ -54,20 +54,16 @@
                 <h2 class="title">Category Products</h2>
                 <ul>
                     <li>
-                        <img src="" alt="apparel kids">
-                        <p>APPAREL KIDS</p>
+                        <a href=""><img src="" alt="apparel kids">APPAREL KIDS</a>
                     </li>
                     <li>
-                        <img src="" alt="holiday shop">
-                        <p>HOLIDAY SHOP</p>
+                        <a href=""><img src="" alt="holiday shop">HOLIDAY SHOP</a>
                     </li>
                     <li>
-                        <img src="" alt="toys">
-                        <p>TOYS</p>
+                        <a href=""><img src="" alt="toys">TOYS</a>
                     </li>
                     <li>
-                        <img src="" alt="accessories">
-                        <p>ACCESSORIES</p>
+                        <a href=""><img src="" alt="accessories">ACCESSORIES</a>
                     </li>
                 </ul>
             </div>
@@ -106,12 +102,12 @@
             </ul>
         </section>
     </main>
-    <article class="design">
+    <section class="design">
         <h2 class="title">Design Life Kids</h2>
         <p class="subtitle">About Us</p>
         <p class="subtitle">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
         <a href="#">buy now</a>
-    </article>
+    </section>
     <article class="contacts">
         <h2 class="title">Contacts</h2>
         <p class="subtitle">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
@@ -142,7 +138,6 @@
                     </li>
                 </ul>
             </nav>
-            <p>Company Rating</p>
         </div>
         <div class="information">
             <p>Customer Information</p>
@@ -168,7 +163,6 @@
                     </li>
                 </ul>
             </nav>
-            <p>Copyright © 2018 Dlk • Design Life Kids</p>
         </div>
         <div class="connect">
             <p>Connect</p>
@@ -188,7 +182,20 @@
                     <a href="#"><img src="" alt="instagram"></a>
                 </li>
             </ul>
-            <p>Web Design — Direct Line Development</p>
+        </div>
+        <div class="footer-bottom">
+            <ul>
+                <li>
+                    Company Rating 
+                    <input type="radio" name="rating" value="1" checked>
+                    <input type="radio" name="rating" value="1">
+                    <input type="radio" name="rating" value="1">
+                    <input type="radio" name="rating" value="1">
+                    <input type="radio" name="rating" value="1">
+                </li>
+                <li>Copyright © 2018 Dlk • Design Life Kids</li>
+                <li>Web Design — Direct Line Development</li>
+            </ul>
         </div>
     </footer>
 </body>
