--- a/index.html
+++ b/index.html
@@ -8,193 +8,229 @@
 </head>
 <body>
     <header class="header">
-        <a href="/"><img src="" alt="logo"></a>
-        <nav class="header-nav">
-            <ul>
-                <li>
-                    <a href="#">Blog</a>
+        <a href="/" class="header__link">
+            <img src="./img/icon/logo.svg" alt="logo" class="header__logo">
+        </a>
+        <nav class="header__nav">
+            <ul class="header__list">
+                <li class="header__list-item">
+                    <a href="#" class="header__list-item-link">Blog</a>
                 </li>
-                <li>
-                    <a href="#">Catalog</a>
+                <li class="header__list-item">
+                    <a href="#" class="header__list-item-link">Catalog</a>
                 </li>
-                <li>
-                    <a href="#">About Us</a>
+                <li class="header__list-item">
+                    <a href="#" class="header__list-item-link">About Us</a>
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li>
-                <a href="#"><img src="" alt="search"></a>
+        <ul class="header__list">
+            <li class="header__list-item">
+                <a href="#" class="header__list-item-link">
+                    <img src="./img/icon/loupe.svg" alt="loupe" class="header__list-item-loupe">
+                </a>
             </li>
-            <li>
-                <a href="#">Contact Us</a>
+            <li class="header__list-item">
+                <a href="#" class="header__list-item-link">Contact Us</a>
             </li>
         </ul>
     </header>
     <main class="main">
         <section class="collection">
-            <div class="switch">
-                <span>01</span>
-                <ul>
-                    <li><button></button></li>
-                    <li><button></button></li>
-                    <li><button></button></li>
-                    <li><button></button></li>
+            <div class="collection__switch">
+                <span class="collection__switch-num">01</span>
+                <ul class="collection__switch-list">
+                    <li class="collection__switch-list-item">
+                        <button class="collection__switch-list-item-button"></button>
+                    </li>
+                    <li class="collection__switch-list-item">
+                        <button class="collection__switch-list-item-button"></button>
+                    </li>
+                    <li class="collection__switch-list-item">
+                        <button class="collection__switch-list-item-button"></button>
+                    </li>
+                    <li class="collection__switch-list-item">
+                        <button class="collection__switch-list-item-button"></button>
+                    </li>
                 </ul>
             </div>
-            <div class="text">
-                <h1 class="title">THE OOH NOO COLLECTION</h1>
-                <p class="subtitle">Designed in Slovenia</p>
-                <button class="button" type="button">EXPLORE NOW</button>
+            <div class="collection__text">
+                <h1 class="collection__text-title">THE OOH NOO COLLECTION</h1>
+                <p class="collection__text-subtitle">Designed in Slovenia</p>
+                <button class="collection__text-button" type="button">EXPLORE NOW</button>
             </div>
-            <p class="sub-subtitle">Free (continental) USA shipping on all orders of $100 USD or more!</p>
+            <p class="collection__sub-subtitle">Free (continental) USA shipping on all orders of $100 USD or more!</p>
         </section>
         <section class="category">
-            <div class="category-products">
-                <h2 class="title">Category Products</h2>
-                <ul>
-                    <li>
-                        <a href=""><img src="" alt="apparel kids">APPAREL KIDS</a>
+            <div class="category__products">
+                <h2 class="category__products-title">Category Products</h2>
+                <ul class="category__products-list">
+                    <li class="category__products-list-item">
+                        <a href="#" class="category__products-list-item-link">
+                            <img src="./img/apparel_kids.png" alt="apparel kids" width="244" height="177" class="category__products-list-item-img">
+                            <p class="category__products-list-item-text">APPAREL KIDS</p>
+                        </a>
                     </li>
-                    <li>
-                        <a href=""><img src="" alt="holiday shop">HOLIDAY SHOP</a>
+                    <li class="category__products-list-item">
+                        <a href="#" class="category__products-list-item-link">
+                            <img src="./img/holiday_shop.png" alt="holiday shop" width="208" height="244" class="category__products-list-item-img">
+                            <p class="category__products-list-item-text">HOLIDAY SHOP</p>
+                        </a>
                     </li>
-                    <li>
-                        <a href=""><img src="" alt="toys">TOYS</a>
+                    <li class="category__products-list-item">
+                        <a href="#" class="category__products-list-item-link">
+                            <img src="./img/toys.png" alt="toys" width="270" height="270" class="category__products-list-item-img">
+                            <p class="category__products-list-item-text">TOYS</p>
+                        </a>
                     </li>
-                    <li>
-                        <a href=""><img src="" alt="accessories">ACCESSORIES</a>
+                    <li class="category__products-list-item">
+                        <a href="#" class="category__products-list-item-link">
+                            <img src="./img/accessories.png" alt="accessories" width="240" height="250" class="category__products-list-item-img">
+                            <p class="category__products-list-item-text">ACCESSORIES</p>
+                        </a>
                     </li>
                 </ul>
             </div>
-            <div class="swith-category">
-                <button class="left-arrow">&lt;</button>
-                <button class="right-arrow">&gt;</button>
-                <p class="category-subtitle">Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
+            <div class="category__switch">
+                <button class="category__switch-left-arrow">
+                    <img src="./img/icon/left_arrow.svg" alt="left-arrow" class="category__switch-left-arrow-img">
+                </button>
+                <button class="category__switch-right-arrow">
+                    <img src="./img/icon/right_arrow.svg" alt="right-arrow" class="category__switch-right-arrow-img">
+                </button>
+                <p class="category__switch-subtitle">Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
             </div>
         </section>
         <section class="delivery">
-            <img class="delivery-img" src="" alt="dress">
-            <div class="delivery-text">
-                <h2 class="title">Delivery</h2>
-                <p class="subtitle">Delivery</p>
-                <p class="subtitle">Guarantee</p>
-                <p class="subtitle">Credit</p>
-                <p class="description">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-                <p class="description">What started as an outlet to deal with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
-                <a href="#">LEARN MORE</a>
+            <img class="delivery__img" src="./img/dress.jpg" alt="dress" width="480" height="559">
+            <div class="delivery__text">
+                <h2 class="delivery__text-title">Delivery</h2>
+                <p class="delivery__text-subtitle">Delivery</p>
+                <p class="delivery__text-subtitle">Guarantee</p>
+                <p class="delivery__text-subtitle">Credit</p>
+                <p class="delivery__text-description">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
+                <p class="delivery__text-description">What started as an outlet to deal with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
+                <a href="#" class="delivery__text-link">LEARN MORE</a>
             </div>
         </section>
         <section class="awards">
-            <ul>
-                <li>
-                    <img src="" alt="mail.ru">
+            <ul class="awards__list">
+                <li class="awards__list-item">
+                    <img src="./img/mail.png" alt="mail" width="193" height="60" class="awards__list-item-img">
                 </li>
-                <li>
-                    <img src="" alt="apple">
+                <li class="awards__list-item">
+                    <img src="./img/apple.png" alt="apple" width="179" height="61" class="awards__list-item-img">
                 </li>
-                <li>
-                    <img src="" alt="eltex">
+                <li class="awards__list-item">
+                    <img src="./img/eltex.png" alt="eltex" width="216" height="46" class="awards__list-item-img">
                 </li>
-                <li>
-                    <img src="" alt="owox">
+                <li class="awards__list-item"> 
+                    <img src="./img/owox.png" alt="owox" width="211" height="40" class="awards__list-item-img">
                 </li>
             </ul>
         </section>
     </main>
     <section class="design">
-        <h2 class="title">Design Life Kids</h2>
-        <p class="subtitle">About Us</p>
-        <p class="subtitle">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-        <a href="#">buy now</a>
+        <h2 class="design__title">Design Life Kids</h2>
+        <p class="design__subtitle">About Us</p>
+        <p class="design__subtitle">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
+        <a href="#" class="design__link">buy now</a>
     </section>
     <article class="contacts">
-        <h2 class="title">Contacts</h2>
-        <p class="subtitle">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
+        <h2 class="contacts__title">Contacts</h2>
+        <p class="contacts__subtitle">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.58601728222!2d-122.4236554651123!3d37.776304100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809eb08736cb%3A0xd0499d3f418e942d!2zNzcgRmVsbCBTdCwgU2FuIEZyYW5jaXNjbywgQ0EgOTQxMDIsINCh0KjQkA!5e0!3m2!1sru!2sru!4v1668937738385!5m2!1sru!2sru" width="483" height="196" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </article>
     <footer class="footer">
-        <div class="navigation">
-            <p>Navigation</p>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#">About Us</a>
+        <div class="footer__navigation">
+            <p class="footer__navigation-title">Navigation</p>
+            <nav class="footer__navigation-nav">
+                <ul class="footer__navigation-nav-list">
+                    <li class="footer__navigation-nav-list-item">
+                        <a href="#" class="footer__navigation-nav-list-item">About Us</a>
                     </li>
-                    <li>
-                        <a href="#">Blog</a>
+                    <li class="footer__navigation-nav-list-item">
+                        <a href="#" class="footer__navigation-nav-list-item-link">Blog</a>
                     </li>
-                    <li>
-                        <a href="#">Design Services</a>
+                    <li class="footer__navigation-nav-list-item">
+                        <a href="#" class="footer__navigation-nav-list-item-link">Design Services</a>
                     </li>
-                    <li>
-                        <a href="#">Featured On</a>
+                    <li class="footer__navigation-nav-list-item">
+                        <a href="#" class="footer__navigation-nav-list-item-link">Featured On</a>
                     </li>
-                    <li>
-                        <a href="#">2018 Holiday Catalog</a>
+                    <li class="footer__navigation-nav-list-item">
+                        <a href="#" class="footer__navigation-nav-list-item-link">2018 Holiday Catalog</a>
                     </li>
-                    <li>
-                        <a href="#">Shop By Designer</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div class="information">
-            <p>Customer Information</p>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#">Contact Us</a>
-                    </li>
-                    <li>
-                        <a href="#">Sale Exclusions</a>
-                    </li>
-                    <li>
-                        <a href="#">Shipping & Returns</a>
-                    </li>
-                    <li>
-                        <a href="#">Terms & Conditions</a>
-                    </li>
-                    <li>
-                        <a href="#">Privacy Policy</a>
-                    </li>
-                    <li>
-                        <a href="#">Search</a>
+                    <li class="footer__navigation-nav-list-item">
+                        <a href="#" class="footer__navigation-nav-list-item-link">Shop By Designer</a>
                     </li>
                 </ul>
             </nav>
         </div>
-        <div class="connect">
-            <p>Connect</p>
-            <input type="text" name="text" placeholder="Email">
-            <button>Join</button>
-            <ul>
-                <li>
-                    <a href="#"><img src="" alt="facebook"></a>
+        <div class="footer_information">
+            <p class="footer_information-title">Customer Information</p>
+            <nav class="footer_information-nav"> 
+                <ul class="footer_information-nav-list">
+                    <li class="footer_information-nav-list-item">
+                        <a href="#" class="footer_information-nav-list-item-link">Contact Us</a>
+                    </li>
+                    <li class="footer_information-nav-list-item">
+                        <a href="#" class="footer_information-nav-list-item-link">Sale Exclusions</a>
+                    </li>
+                    <li class="footer_information-nav-list-item">
+                        <a href="#" class="footer_information-nav-list-item-link">Shipping & Returns</a>
+                    </li>
+                    <li class="footer_information-nav-list-item">
+                        <a href="#" class="footer_information-nav-list-item-link">Terms & Conditions</a>
+                    </li>
+                    <li class="footer_information-nav-list-item">
+                        <a href="#" class="footer_information-nav-list-item-link">Privacy Policy</a>
+                    </li>
+                    <li class="footer_information-nav-list-item">
+                        <a href="#" class="footer_information-nav-list-item-link">Search</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="footer__connect">
+            <p class="footer__connect-title">Connect</p>
+            <input type="text" name="text" placeholder="Email" class="footer__connect-input">
+            <button class="footer__connect-button">Join</button>
+            <ul class="footer__connect-list">
+                <li class="footer__connect-list-item">
+                    <a href="#" class="footer__connect-list-item-link">
+                        <img src="./img/icon/facebook.svg" alt="facebook" class="footer__connect-list-item-link-img">
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="" alt="twitter"></a>
+                    <a href="#" class="footer__connect-list-item-link">
+                        <img src="./img/icon/twitter.svg" alt="twitter" class="footer__connect-list-item-link-img">
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="" alt="pinterest"></a>
+                    <a href="#" class="footer__connect-list-item-link">
+                        <img src="./img/icon/pinterest.svg" alt="pinterest" class="footer__connect-list-item-link-img">
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="" alt="instagram"></a>
+                    <a href="#" class="footer__connect-list-item-link">
+                        <img src="./img/icon/instagram.svg" alt="instagram" class="footer__connect-list-item-link-img">
+                    </a>
                 </li>
             </ul>
         </div>
-        <div class="footer-bottom">
-            <ul>
-                <li>
+        <div class="footer__bottom">
+            <ul class="footer__bottom-list">
+                <li class="footer__bottom-list-item">
                     Company Rating 
-                    <input type="radio" name="rating" value="1" checked>
-                    <input type="radio" name="rating" value="1">
-                    <input type="radio" name="rating" value="1">
-                    <input type="radio" name="rating" value="1">
-                    <input type="radio" name="rating" value="1">
+                    <input type="radio" name="rating" value="1" checked class="footer__bottom-list-item-star">
+                    <input type="radio" name="rating" value="1" class="footer__bottom-list-item-star">
+                    <input type="radio" name="rating" value="1" class="footer__bottom-list-item-star">
+                    <input type="radio" name="rating" value="1" class="footer__bottom-list-item-star">
+                    <input type="radio" name="rating" value="1" class="footer__bottom-list-item-star">
                 </li>
-                <li>Copyright © 2018 Dlk • Design Life Kids</li>
-                <li>Web Design — Direct Line Development</li>
+                <li class="footer__bottom-list-item">Copyright © 2018 Dlk • Design Life Kids</li>
+                <li class="footer__bottom-list-item">Web Design — Direct Line Development</li>
             </ul>
         </div>
     </footer>
