добавила модальное окно

--- a/index.html
+++ b/index.html
@@ -234,5 +234,35 @@
             </ul>
         </div>
     </footer>
+    <div class="modal">
+        <a href="#" class="modal__close">
+            <img src="./img/close.png" alt="close">
+        </a>
+        <form method="post" action="#">
+            <div class="modal__wrapper">
+                <label for="">Name</label>
+                <input type="text">
+            </div>
+            <div class="modal__wrapper-two-input">
+                <div class="modal__wrapper">
+                    <label for="">Phone</label>
+                    <input type="tel">
+                </div>
+                <div class="modal__wrapper">
+                    <label for="">Email</label>
+                    <input type="email">
+                </div>
+            </div>
+            <div class="modal__message">
+                <p class="modal__message">Message</p>
+                <textarea name="message" id="" cols="80" rows="10"></textarea>
+            </div>
+            <div class="modal__checkbox">
+                <input id="personal" type="checkbox">
+                <label for="personal">By clicking on the button, you consent to the processing of your personal data</label>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
