добавила страницы blog, catalog, contact, toys

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav class="header__nav">
             <ul class="header__list">
                 <li class="header__list-item">
-                    <a href="#" class="header__list-item-link">Blog</a>
+                    <a href="./page/blog.html" class="header__list-item-link">Blog</a>
                 </li>
                 <li class="header__list-item">
-                    <a href="#" class="header__list-item-link">Catalog</a>
+                    <a href="./page/catalog.html" class="header__list-item-link">Catalog</a>
                 </li>
                 <li class="header__list-item">
                     <a href="#" class="header__list-item-link">About Us</a>
@@ -31,7 +31,7 @@
                 </a>
             </li>
             <li class="header__list-item">
-                <a href="#" class="header__list-item-link">Contact Us</a>
+                <a href="./page/contact.html" class="header__list-item-link">Contact Us</a>
             </li>
         </ul>
     </header>
