--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/normalize.css">
     <link rel="stylesheet" href="/style/common.css">
+    <link rel="stylesheet" href="/style/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -42,29 +43,33 @@
     </header>
     <main class="main">
         <section class="collection container">
-            <div class="collection__switch">
-                <span class="collection__switch-num">01</span>
-                <ul class="collection__switch-list undotted">
-                    <li class="collection__switch-list-item">
-                        <button class="collection__switch-list-item-button"></button>
-                    </li>
-                    <li class="collection__switch-list-item">
-                        <button class="collection__switch-list-item-button"></button>
-                    </li>
-                    <li class="collection__switch-list-item">
-                        <button class="collection__switch-list-item-button"></button>
-                    </li>
-                    <li class="collection__switch-list-item">
-                        <button class="collection__switch-list-item-button"></button>
-                    </li>
-                </ul>
+            <div class="collection__wrapper">
+                <div class="collection__switch">
+                    <span class="collection__switch-num">01</span>
+                    <ul class="collection__switch-list undotted">
+                        <li class="collection__switch-list-item">
+                            <button class="collection__switch-list-item-button"></button>
+                        </li>
+                        <li class="collection__switch-list-item">
+                            <button class="collection__switch-list-item-button"></button>
+                        </li>
+                        <li class="collection__switch-list-item">
+                            <button class="collection__switch-list-item-button"></button>
+                        </li>
+                        <li class="collection__switch-list-item">
+                            <button class="collection__switch-list-item-button"></button>
+                        </li>
+                    </ul>
+                </div>
+                <div class="collection__text">
+                    <h1 class="collection__text-title">THE OOH NOO COLLECTION</h1>
+                    <p class="collection__text-subtitle">Designed in Slovenia</p>
+                    <button class="collection__text-button" type="button">EXPLORE NOW</button>
+                </div>
             </div>
-            <div class="collection__text">
-                <h1 class="collection__text-title">THE OOH NOO COLLECTION</h1>
-                <p class="collection__text-subtitle">Designed in Slovenia</p>
-                <button class="collection__text-button" type="button">EXPLORE NOW</button>
+            <div class="collection__basement">
+                <p class="collection__sub-subtitle">Free (continental) USA shipping on all orders of $100 USD or more!</p>
             </div>
-            <p class="collection__sub-subtitle">Free (continental) USA shipping on all orders of $100 USD or more!</p>
         </section>
         <section class="category container">
             <div class="category__products">
