модальное окно+ расположение на странице catalog + кнопки на странице toys

--- a/index.html
+++ b/index.html
@@ -262,9 +262,7 @@
         </div>
     </footer>
     <div class="modal">
-        <a href="#" class="modal__close">
-            <img src="./img/close.png" alt="close">
-        </a>
+        <div class="modal__overlay"></div>
         <div class="contact__main">
             <div class="contact__main-wrapper">
                 <form method="post" action="#" class="contact__main-form">
@@ -294,6 +292,8 @@
                 </form>
             </div>
         </div>
+        <a href="#" class="modal__close"></a>
     </div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
